--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,24 @@
-# Java build output
-/bin/
-/build/
+# Compiled class file
 *.class
 
-# IDE specific files
-.classpath
-.project
-.settings/
-.idea/
-*.iml
+# Log file
+*.log
 
-# OS-specific
-.DS_Store
-Thumbs.db
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+replay_pid*
